[package]
name = "superprofiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
nix = { version = "0.24.1", features = ["process", "ptrace"] }
log = "0.4"
anyhow = "1.0"
libc = "0.2.125"
pretty_env_logger = "0.4.0"
proc-maps = "0.2.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
iced-x86 = "1.17.0"
